fix: stretching sponsor logos

--- a/styles/SponsorList.module.css
+++ b/styles/SponsorList.module.css
@@ -11,6 +11,7 @@
 .sponsor_list_item {
   margin: 1rem;
   display: flex;
+  align-items: center;
 }
 
 .sponsor_list_item_logo {
